fix squashed footer img

--- a/static/oabutton_rebrand.css
+++ b/static/oabutton_rebrand.css
@@ -597,7 +597,6 @@ div.greenbottom {
     padding:0;
   }
   .footer-team img{
-    max-width: 395px;
     height: 315px;
     padding: 0 40px;
   }
